Changes to iPad version.

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ table{
 }
 
 .textblock {
-  width:80%;
+  width:50%;
 }
 
 .about_text{
@@ -212,9 +212,9 @@ font-size: 16px;
 .div_image{
   width:100%;
   max-height:400px;
-  height:330px;
-  background-size: 910px;
-  background-position: -60px -250px;
+  height:200px;
+  background-size: 1600px;
+  background-position: center -490px;
   background-repeat: no-repeat;
 }
 
