--- a/gigs.html
+++ b/gigs.html
@@ -17,76 +17,46 @@
 		<a href="index.html">< Back</a><br>
 	</div>
 	</div>
-
-<hr>
-
-	<h4>"Just For Kicks Comedy Gala"</h4>
-
-	<p>Sat 1 June, 7pm</p>
-
-	<p>Emanuel School Hall, 20 Stanley Street (corner Avoca St) Randwick</p>
-
-	<a href=" www.trybooking.com/CSGV" class="btn btn-info">Book Here!</a>
-<hr>
-
-<hr>
-
-	<h4>Melbourne: 25 - 31 May</h4>
-
-	<p>Spleen Comedy Club, 27 May</p>
-	<p>Shisha Comedy, 28 May</p>
-	<p>More details TBC</p>
-
-	<a href="http://www.twitter.com/aliterative" class="btn btn-info">Watch Twitter for details</a>
-<hr>
-
-<hr>
-	<h4>MC at the Oriental Hotel in Newcastle</h4>
-
-	<p></p>
-
-	<p>25 May, 7:30 PM Oriental Hotel, 53 Bull St, Cooks Hill, Newcastle.</p>
-
-	<a href="http://www.newcastlecomedy.com/tag/the-oriental-hotel/" class="btn btn-info">Details Here</a>
-<hr>
-
-<hr>
-
-	<h4>"Nerd Nite All Star Comedy Gala"</h4>
-
-	<p>Sydney Comedy Festival 2013</p>
-
-	<p>Tue 07 May, 7:30 PM, Factory Theatre, Marrickville</p>
-
-	<a href="http://www.sydneycomedyfest.com.au/single-event?show_id=86" class="btn btn-info">SOLD OUT!</a>
-<hr>
-<hr>
-
-	<h4>"Rights! Comedy! Action!" ActionAid Comedy Gala</h4>
-
-	<p>Sydney Comedy Festival 2013</p>
-
-	<p>Thu 09 May, 9:30PM, Enmore Theatre</p>
-
-	<a href="http://premier.ticketek.com.au/shows/show.aspx?sh=ACTIONAI13#.UXfWKCsmnze" class="btn btn-info">SOLD OUT!</a>
-<hr>
-<hr>
-
-	<h4>"Aggressively Helpful" EXTRA SHOW </h4>
-
-	<p>Sydney Comedy Festival 2013</p>
-
-	<p> Fri 10 May, 10.15pm, Factory Theatre, Marrickville</p>
-
-	<a href=" http://premier.ticketek.com.au/Shows/Show.aspx?sh=AGGRESSI13" class="btn btn-info">Tickets Here!</a>
-
 	<br>
+
 <hr>
+
+	<h4>Featuring at "A Rational Fear" on Radio National</h4>
+
+	<p>Thurs 6 June, 7pm</p>
+
+	<p>The Laugh Garage, Cnr Elizabeth St & Park St, Sydney CBD</p>
+
+	<a href="http://www.abc.net.au/radionational/programs/rationalfear/">Details Here!</a>
+
+<hr>
+
+	<h4>Headlining "Comedy Slam at Smiths Alternative" in Canberra</h4>
+
+	<p>Tues 11 June, 7.30pm</p>
+
+	<p>Smiths Alternative, 76 Alinga St Canberra City</p>
+
+	<a href="http://the-riotact.com/comedy-slam-at-smiths-alternative/105501">Details Here!</a>
+
+
+<hr>
+
+	<h4>MC at "Livewired" in Brisbane</h4>
+
+	<p>30 June, 7.30pm</p>
+
+	<p>119 Lamington St, New Farm, QLD.</p>
+
+	<a href="https://www.facebook.com/livewiredcomedy">Details Here!</a>
+
+
+<br>
+<br>
+
 
 <a href="index.html">< Back</a>
-<br>
-<br>
-<br>
+
 
 	</div>
 	</div>
