--- a/new_test.html
+++ b/new_test.html
@@ -22,7 +22,7 @@ html, body{
     height: 100%;
     position: fixed;
     background-color: rgb(238, 238, 238);
-    border: 1px solid black;
+    /*border: 1px solid black;*/
 }
 
 .right {
@@ -32,7 +32,7 @@ html, body{
     margin-bottom: 0px;
     height: 100%;
     background-color: rgb(238, 238, 238);
-    border: 1px solid black;
+    /*border: 1px solid black;*/
     width:auto;
     float: left;
 }
@@ -57,25 +57,27 @@ html, body{
 .left{
     width:100%;
     position:static;
+    border: none;
 }
 
 .right{
     width:100%;
     float:left;
-    margin-left:0px
+    margin-left:0px;
+    border: none;
 }
 
 .divcontainer{
     /*margin-left:auto;*/
     /*margin-right: auto;*/
     text-align: center;
+    border: none;
 }
 
 .tile{
     float:none;
     display:inline-block;
 }
-
 
 }
 
