--- a/gigs.html
+++ b/gigs.html
@@ -27,7 +27,7 @@
 
 	<p>The Laugh Garage, Cnr Elizabeth St & Park St, Sydney CBD</p>
 
-	<a href="http://www.abc.net.au/radionational/programs/rationalfear/">Details Here!</a>
+	<a class="btn btn-info" href="http://www.abc.net.au/radionational/programs/rationalfear/">Details Here!</a>
 
 <hr>
 
@@ -37,7 +37,7 @@
 
 	<p>Smiths Alternative, 76 Alinga St Canberra City</p>
 
-	<a href="http://the-riotact.com/comedy-slam-at-smiths-alternative/105501">Details Here!</a>
+	<a class="btn btn-info" href="http://the-riotact.com/comedy-slam-at-smiths-alternative/105501">Details Here!</a>
 
 
 <hr>
@@ -48,7 +48,7 @@
 
 	<p>119 Lamington St, New Farm, QLD.</p>
 
-	<a href="https://www.facebook.com/livewiredcomedy">Details Here!</a>
+	<a class="btn btn-info" href="https://www.facebook.com/livewiredcomedy">Details Here!</a>
 
 
 <br>
