Gigs changes 18 June 2013

--- a/gigs.html
+++ b/gigs.html
@@ -19,25 +19,18 @@
 	</div>
 	<br>
 
-<hr>
-
-	<h4>Featuring at "A Rational Fear" on Radio National</h4>
-
-	<p>Thurs 6 June, 7pm</p>
-
-	<p>The Laugh Garage, Cnr Elizabeth St & Park St, Sydney CBD</p>
-
-	<a class="btn btn-info" href="http://www.abc.net.au/radionational/programs/rationalfear/">Details Here!</a>
 
 <hr>
 
-	<h4>Headlining "Comedy Slam at Smiths Alternative" in Canberra</h4>
+<h4>Resident MC Bedlam Bar - June </h4>
 
-	<p>Tues 11 June, 7.30pm</p>
+            <p>Tues 18, 25 June, 7.30pm</p>
 
-	<p>Smiths Alternative, 76 Alinga St Canberra City</p>
+            <p>Bedlam Bar, Cnr Paramatta Rd, Glebe pt Rd, Glebe</p>
 
-	<a class="btn btn-info" href="http://the-riotact.com/comedy-slam-at-smiths-alternative/105501">Details Here!</a>
+            <a class="btn btn-info" href="http://www.bedlambar.com.au/">Venue Details Here!</a>
+
+
 
 
 <hr>
@@ -49,6 +42,34 @@
 	<p>119 Lamington St, New Farm, QLD.</p>
 
 	<a class="btn btn-info" href="https://www.facebook.com/livewiredcomedy">Details Here!</a>
+
+<hr>
+
+
+
+            <h4>Solo Show, Alice Fraser does Word Crime in Canberra</h4>
+
+            <p>Thurs 25 July, 8pm</p>
+
+            <p>Smiths Alternative, 76 Alinga St Canberra City</p>
+
+            <a class="btn btn-info" href="http://the-riotact.com/comedy-slam-at-smiths-alternative/105501">Details TBC!</a>
+
+<hr>
+
+            <h4>A Rational Fear and Panel Discussion at Splendour in the Grass</h4>
+
+            <p>Fri 26 July, TBC</p>
+
+            <p>Byron Bay</p>
+
+            <a class="btn btn-info" href="http://arationalfear.tumblr.com">Details TBC!</a>
+
+<hr>
+
+
+
+
 
 
 <br>
