New September show details updated.

--- a/gigs.html
+++ b/gigs.html
@@ -20,6 +20,35 @@
 	<br>
 
 
+<h4>Everyone's a Winner</h4>
+
+            <p>8:15pm, Thursday 19 September 2013</p>
+
+            <p>"The Matchbox", 105 Victoria Road, Marrickville</p>
+
+            <a class="btn btn-info" href="http://sa2.seatadvisor.com/sabo/servlets/TicketRequest;jsessionid=87930A53B2D096CBA973D8EDFEF59F81?eventId=100652676&presenter=AUCENTURY&venue&event">Buy Tickets!</a>
+
+<hr>
+
+
+
+
+            <h4>Everyone's a Winner</h4>
+
+            <p>8:15pm, Thursday 12 September 2013</p>
+
+            <p>"The Matchbox", 105 Victoria Road, Marrickville</p>
+
+            <a class="btn btn-info" href="http://sa2.seatadvisor.com/sabo/servlets/TicketRequest;jsessionid=87930A53B2D096CBA973D8EDFEF59F81?eventId=100652676&presenter=AUCENTURY&venue&event">Buy Tickets!</a>
+
+<hr>
+
+
+
+
+
+<h3>Previous Work</h3>
+
 
 
 <hr>
