Gig updates on 9 October 2013.

--- a/gigs.html
+++ b/gigs.html
@@ -13,11 +13,108 @@
 	<div class="span8 offset2" style="text-align:center">
 		<div class="row">
 		<div class="span8 offet4" style="text-align:center">
-		<h3>Upcoming Gigs</h3>
+		<h3>You can see me in...</h3>
 		<a href="index.html">< Back</a><br>
 	</div>
 	</div>
 	<br>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<br>
+<h4>Beauty Bar</h4>
+
+            <p>Thursday, 8 pm, 10 October 2013</p>
+
+            <p>231 E 14th St Frnt 1, New York</p>
+
+
+<br>
+<hr>
+
+
+<br>
+
+
+<h4>New York Comedy Club</h4>
+
+            <p>Saturday, 9 pm, 12 October 2013</p>
+
+            <p>Best to arrive at 8.30pm.  Call for reservations on 212-696-5233, or hit the link below.</p>
+
+
+            <a class="btn btn-info" href="http://www.newyorkcomedyclub.com/">Get a Reservation</a>
+
+<br>
+<br>
+<hr>
+<br>
+
+<h4>Broadway Comedy Club</h4>
+
+            <p>Tuesday, 8 pm, 14 October 2013</p>
+
+
+            <a class="btn btn-info" href="http://www.broadwaycomedyclub.com/">Take a Look</a>
+
+<br>
+<br>
+<hr>
+<br>
+
+
+
+<h4>Greenwich Village Comedy Club</h4>
+
+            <p>Wednesday, 7 pm, 15 October 2013</p>
+
+
+            <a class="btn btn-info" href="http://www.greenwichvillagecomedyclub.com/">Take a Look</a>
+
+<br>
+<br>
+<hr>
+<br>
+
+
+<h4>New York Comedy Club</h4>
+
+            <p>Friday, 9 pm, 18 October 2013</p>
+
+
+
+            <a class="btn btn-info" href="http://www.newyorkcomedyclub.com/">Take a Look</a>
+
+<br>
+<br>
+
+
+<br>
+
+
+<br>
+<br>
+
+
+
+<h3>You missed me at...</h3>
+
+
 
 
 <h4>Everyone's a Winner</h4>
@@ -26,7 +123,6 @@
 
             <p>"The Matchbox", 105 Victoria Road, Marrickville</p>
 
-            <a class="btn btn-info" href="http://sa2.seatadvisor.com/sabo/servlets/TicketRequest;jsessionid=87930A53B2D096CBA973D8EDFEF59F81?eventId=100652676&presenter=AUCENTURY&venue&event">Buy Tickets!</a>
 
 <hr>
 
@@ -39,22 +135,10 @@
 
             <p>"The Matchbox", 105 Victoria Road, Marrickville</p>
 
-            <a class="btn btn-info" href="http://sa2.seatadvisor.com/sabo/servlets/TicketRequest;jsessionid=87930A53B2D096CBA973D8EDFEF59F81?eventId=100652676&presenter=AUCENTURY&venue&event">Buy Tickets!</a>
 
 
 
-
-<br>
-<br>
-<br>
-<br>
-<br>
-
-
-
-<h3>Previous Work</h3>
-
-
+<hr>
 
 
 
@@ -64,7 +148,7 @@
 
             <p>Byron Bay</p>
 
-            <a class="btn btn-info" href="http://arationalfear.tumblr.com">Details TBC!</a>
+
 
 
 
@@ -80,7 +164,6 @@
 
             <p>Smiths Alternative, 76 Alinga St Canberra City</p>
 
-            <a class="btn btn-info" href="http://the-riotact.com/comedy-slam-at-smiths-alternative/105501">Details TBC!</a>
 
 
 
@@ -93,7 +176,7 @@
 
   <p>119 Lamington St, New Farm, QLD.</p>
 
-  <a class="btn btn-info" href="https://www.facebook.com/livewiredcomedy">Details Here!</a>
+
 
 
 
@@ -108,7 +191,7 @@
 
             <p>Bedlam Bar, Cnr Paramatta Rd, Glebe pt Rd, Glebe</p>
 
-            <a class="btn btn-info" href="http://www.bedlambar.com.au/">Venue Details Here!</a>
+
 
 
 <br>
