--- a/gigs.html
+++ b/gigs.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -29,11 +28,43 @@
 
 
 
+<br>
+
+
+<h4>"Tracksuits" FBI Radio 94.5</h4>
+
+            <p>Mondays 12pm</p>
+
+            <p>tune in online</p>
+
+            <a class="btn btn-info" href="http://www.fbiradio.com/program/tracksuits/">Here</a>
+
+<br>
+<br>
+<hr>
+<br>
 
 
 
+<br>
 
 
+<h4>"Final Draft" 2Ser Radio 107.3</h4>
+
+            <p>Saturdays 10am</p>
+
+            <p>tune in online</p>
+
+            <a class="btn btn-info" href="http://www.2ser.com/privacy/itemlist/category/99">Here</a>
+
+<br>
+<br>
+<hr>
+<br>
+
+
+
+<h3>You missed me at...</h3>
 
 
 <br>
@@ -109,11 +140,6 @@
 
 <br>
 <br>
-
-
-
-<h3>You missed me at...</h3>
-
 
 
 
