--- a/gigs.html
+++ b/gigs.html
@@ -43,7 +43,6 @@
 
             <p>Canberra Comedy Festival: Tickets On Sale Soon</p>
 
-
 <br>
 <br>
 <hr>
@@ -55,9 +54,8 @@
 
 <h4>"Everyone's A Winner" Melbourne International Comedy Festival 2014</h4>
 
-            <p>27 March – 6 April (excl. Mondays) 8.30pm </p>
-            <p>8 April - 20 April (excl. Mondays) 6.15pm </p>
-            <p>Previews 27 - 30 March </p>
+            <p>27 March to 6 April (excl. Mondays) 8.30pm </p>
+            <p>8 April to 20 April (excl. Mondays) 6.15pm </p>
             <p>$22 full / $18 concession / $18 Group 6+ / $15 Preview / $15 Tightarse Tuesday</p>
 
             <p>Tickets Available!</p>
@@ -120,70 +118,33 @@
 <br>
 <hr>
 
-
-<br>
-
-
 <h4>New York Comedy Club</h4>
 
             <p>Saturday, 9 pm, 12 October 2013</p>
 
-            <p>Best to arrive at 8.30pm.  Call for reservations on 212-696-5233, or hit the link below.</p>
-
-
-            <a class="btn btn-info" href="http://www.newyorkcomedyclub.com/">Get a Reservation</a>
-
-<br>
 <br>
 <hr>
-<br>
 
 <h4>Broadway Comedy Club</h4>
 
             <p>Tuesday, 8 pm, 14 October 2013</p>
 
-
-            <a class="btn btn-info" href="http://www.broadwaycomedyclub.com/">Take a Look</a>
-
-<br>
 <br>
 <hr>
-<br>
-
 
 
 <h4>Greenwich Village Comedy Club</h4>
 
             <p>Wednesday, 7 pm, 15 October 2013</p>
 
-
-            <a class="btn btn-info" href="http://www.greenwichvillagecomedyclub.com/">Take a Look</a>
-
-<br>
 <br>
 <hr>
-<br>
-
 
 <h4>New York Comedy Club</h4>
 
             <p>Friday, 9 pm, 18 October 2013</p>
 
-
-
-            <a class="btn btn-info" href="http://www.newyorkcomedyclub.com/">Take a Look</a>
-
 <br>
-<br>
-
-
-<br>
-
-
-<br>
-<br>
-
-
 
 <h4>Everyone's a Winner</h4>
 
@@ -210,7 +171,7 @@
 
 
 
-            <h4>A Rational Fear and Panel Discussion at Splendour in the Grass</h4>
+            <h4>A Rational Fear and Panel Discussion with <b>Julian Assange</b>at Splendour in the Grass</h4>
 
             <p>Fri 26 July, TBC</p>
 
