--- a/gigs.html
+++ b/gigs.html
@@ -18,7 +18,30 @@
 	</div>
 	<br>
 
+<br>
 
+
+<h4>These are my big gigs. If you're wondering if I'm doing anything today</h4>
+
+            <p>Check it out</p>
+
+            <a class="btn btn-info" href="http://www.twitter.com/aliterative">On Twitter</a>
+
+<br>
+
+
+<h4>"Everyone's A Winner" - Melbourne International Comedy Festival 2014</h4>
+
+            <p>27 March to 6 April (excl. Mondays) 8.30pm </p>
+            <p>8 April to 20 April (excl. Mondays) 6.15pm </p>
+            <p>$22 full / $18 concession / $18 Group 6+ / $15 Preview / $15 Tightarse Tuesday</p>
+
+            <p>Tickets Available!</p>
+
+            <a class="btn btn-info" href="http://www.trybooking.com/Booking/BookingEventSummary.aspx?eid=71570">Here</a>
+
+<br>
+<hr>
 <br>
 
 
@@ -33,10 +56,6 @@
 <hr>
 <br>
 
-
-<br>
-
-
 <h4>"Everyone's A Winner" at the Canberra Comedy Festival</h4>
 
             <p>Sat March 8th at 7pm</p>
@@ -46,30 +65,8 @@
 <br>
 <br>
 <hr>
-<br>
-
 
 <br>
-
-
-<h4>"Everyone's A Winner" Melbourne International Comedy Festival 2014</h4>
-
-            <p>27 March to 6 April (excl. Mondays) 8.30pm </p>
-            <p>8 April to 20 April (excl. Mondays) 6.15pm </p>
-            <p>$22 full / $18 concession / $18 Group 6+ / $15 Preview / $15 Tightarse Tuesday</p>
-
-            <p>Tickets Available!</p>
-
-            <a class="btn btn-info" href="http://www.trybooking.com/Booking/BookingEventSummary.aspx?eid=71570">Here</a>
-
-<br>
-<br>
-<hr>
-<br>
-
-
-<br>
-
 
 <h4>"Tracksuits" FBI Radio 94.5</h4>
 
@@ -83,11 +80,6 @@
 <br>
 <hr>
 <br>
-
-
-
-<br>
-
 
 <h4>"Final Draft" 2Ser Radio 107.3</h4>
 
@@ -171,7 +163,7 @@
 
 
 
-            <h4>A Rational Fear and Panel Discussion with <b>Julian Assange</b>at Splendour in the Grass</h4>
+            <h4>A Rational Fear and Panel Discussion with <b>Julian Assange</b> at Splendour in the Grass</h4>
 
             <p>Fri 26 July, TBC</p>
 
