--- a/gigs.html
+++ b/gigs.html
@@ -21,12 +21,15 @@
 <br>
 
 
-<h4>These are my big gigs. If you're wondering if I'm doing anything today</h4>
+<h4>Below are my big upcoming gigs. </h4>
 
-            <p>Check it out</p>
+            <p>If you're wondering if I'm doing anything today, follow me</p>
 
-            <a class="btn btn-info" href="http://www.twitter.com/aliterative">On Twitter</a>
+            <a class="btn btn-info" href="http://www.twitter.com/aliterative">on twitter</a>
+            <a class="btn btn-info" href="http://www.facebook.com/alice.r.fraser">on facebook</a>
 
+<br>
+<hr>
 <br>
 
 
@@ -52,7 +55,6 @@
             <p>Canberra Comedy Festival: Tickets On Sale Soon</p>
 
 <br>
-<br>
 <hr>
 <br>
 
@@ -77,7 +79,6 @@
             <a class="btn btn-info" href="http://www.fbiradio.com/program/tracksuits/">Here</a>
 
 <br>
-<br>
 <hr>
 <br>
 
@@ -89,7 +90,6 @@
 
             <a class="btn btn-info" href="http://www.2ser.com/privacy/itemlist/category/99">Here</a>
 
-<br>
 <br>
 <hr>
 <br>
@@ -105,7 +105,6 @@
             <p>Thursday, 8 pm, 10 October 2013</p>
 
             <p>231 E 14th St Frnt 1, New York</p>
-
 
 <br>
 <hr>
@@ -140,39 +139,19 @@
 
 <h4>Everyone's a Winner</h4>
 
-            <p>8:15pm, Thursday 19 September 2013</p>
+            <p>8:15pm, Thursday 12 and 19 September 2013</p>
 
             <p>"The Matchbox", 105 Victoria Road, Marrickville</p>
-
 
 <hr>
 
 
 
+            <h4>A Rational Fear and Panel Debate against <b>Julian Assange</b> at Splendour in the Grass</h4>
 
-            <h4>Everyone's a Winner</h4>
-
-            <p>8:15pm, Thursday 12 September 2013</p>
-
-            <p>"The Matchbox", 105 Victoria Road, Marrickville</p>
-
-
-
-
-<hr>
-
-
-
-            <h4>A Rational Fear and Panel Discussion with <b>Julian Assange</b> at Splendour in the Grass</h4>
-
-            <p>Fri 26 July, TBC</p>
+            <p>Fri 26 July</p>
 
             <p>Byron Bay</p>
-
-
-
-
-
 
 
 <hr>
@@ -186,9 +165,6 @@
             <p>Smiths Alternative, 76 Alinga St Canberra City</p>
 
 
-
-
-
 <hr>
 
   <h4>MC at "Livewired" in Brisbane</h4>
@@ -196,13 +172,6 @@
   <p>30 June, 7.30pm</p>
 
   <p>119 Lamington St, New Farm, QLD.</p>
-
-
-
-
-
-
-
 
 <hr>
 
@@ -212,10 +181,6 @@
 
             <p>Bedlam Bar, Cnr Paramatta Rd, Glebe pt Rd, Glebe</p>
 
-
-
-
-<br>
 <br>
 
 <a href="index.html">< Back</a>
