--- a/xml.html
+++ b/xml.html
@@ -92,7 +92,7 @@ Things I need...
   <p><b>File Size</b> - Fill this out by right clicking on the mp3, hitting "Get Info", and type in the number of "bytes" (which will be large).<br></p>
   <textarea type='text' rows="5" cols="60" name="fileSize"></textarea>
   <br><br>
-  <p><b>Title</b> - Title of the Podcast: maximum [*] words.<br></p>
+  <p><b>Title</b> - Title of the Podcast (don't include full stops): maximum [*] words.<br></p>
   <textarea type='text' rows="5" cols="60" name="title"></textarea>
   <br><br>
 
