--- a/xml.html
+++ b/xml.html
@@ -79,13 +79,13 @@ $(document).ready(function(){
 
 <form id="createScript">
   <p><b>Episode Number</b> - Fill this out with three digits.  Episode number 20 will be "020", for instance.<br></p>
-  <textarea type='text' rows="5" cols="60" name="episodeNumber" class="span7"></textarea>
+  <textarea type='text' rows="1" cols="60" name="episodeNumber" class="span3"></textarea>
   <br><br>
   <p><b>File Size</b> - Fill this out by right clicking on the mp3, hitting "Get Info", and type in the number of "bytes" (which will be large).<br></p>
-  <textarea type='text' rows="5" cols="60" name="fileSize"></textarea>
+  <textarea type='text' rows="1" cols="60" name="fileSize" class="span3"></textarea>
   <br><br>
   <p><b>Title</b> - Title of the Podcast (don't include full stops): maximum [*] words.<br></p>
-  <textarea type='text' rows="5" cols="60" name="title"></textarea>
+  <textarea type='text' rows="1" cols="60" name="title"></textarea>
   <br><br>
 
   <p><b>Subtitle</b> - Subtitle of the Podcast: maximum [*] words.<br></p>
@@ -97,7 +97,7 @@ $(document).ready(function(){
   <br><br>
 
   <p><b>Duration</b> - Duration of the Podcast - Format: 10 minutes and 5 seconds would look like this: "10:05".<br></p>
-  <textarea type='text' rows="5" cols="60" name="duration"></textarea>
+  <textarea type='text' rows="1" cols="60" name="duration" class="span3"></textarea>
   <br><br>
 
 
