Added SSL config for mixpanel.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@ typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var
 b._i.push([a,e,d])};b.__SV=1.2}})(document,window.mixpanel||[]);
 mixpanel.init("d16c49addb5aa31a902206761744444c");</script><!-- end Mixpanel -->
 
+
+
 <script type="text/javascript">
+mixpanel.set_config({api_host: "https://api.mixpanel.com"})﻿;
 mixpanel.track("Home Page Hit");
 </script>
 
