--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ mixpanel.init("d16c49addb5aa31a902206761744444c");</script><!-- end Mixpanel -->
 
 
 <script type="text/javascript">
-mixpanel.set_config({api_host: "https://api.mixpanel.com"})﻿;
+mixpanel.set_config({api_host: "https://api.mixpanel.com"});
 mixpanel.track("Home Page Hit");
 </script>
 
