--- a/index.html
+++ b/index.html
@@ -473,28 +473,30 @@ line-height: 19px;
 
 
         <a href="http://newslabarticles.tumblr.com/" target="_blank">
-          <div class="tile" style="background-image:url('img/newslab.png');background-size: 165px;background-repeat:repeat;background-position:top;">
+          <div class="tile" style="background-image:url('img/podcast.png');background-position:top;background-position:top">
             <div class="band">
-              <text class="band_text">News Lab</text>
+              <text class="band_text">Podcast</text>
+            </div>
+          </div>
+        </a>
+
+        <a href="gigs.html" target="_blank">
+          <div class="tile" style="background-image:url('img/standup_small.jpg');background-size: 220px;background-position:top;">
+            <div class="band">
+              <text class="band_text">Standup Comedy</text>
             </div>
           </div>
         </a>
 
         <a href="http://www.fbiradio.com/program/tracksuits/" target="_blank">
-          <div class="tile" style="background-image:url('img/fbi.jpg');background-size: 610px;">
+          <div class="tile" style="background-image:url('img/fbi_small.jpg');">
             <div class="band">
               <text class="band_text">FBi Radio</text>
             </div>
           </div>
         </a>
 
-        <a href="gigs.html" target="_blank">
-          <div class="tile" style="background-image:url('img/standup.png');background-size: 220px;background-position:top;">
-            <div class="band">
-              <text class="band_text">Standup Comedy</text>
-            </div>
-          </div>
-        </a>
+
 
         <a href="http://alicecomedyfraser.tumblr.com/" target="_blank">
           <div class="tile" style="background-image:url('img/podcast.jpg');background-size: 400px;background-position:center;background-position:top;">
@@ -505,7 +507,7 @@ line-height: 19px;
         </a>
 
         <a href="http://www.aggressivelyhelpful.com" target="_blank">
-          <div class="tile" style="background-image:url('img/aggressive.png');background-size: 320px;background-position:center;background-position:top;">
+          <div class="tile" style="background-image:url('img/aggressive_small.jpg');background-position:center;background-position:top;">
             <div class="band">
               <text class="band_text helpful">Aggressively Helpful</text>
             </div>
