--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@ line-height: 19px;
 
 
         <a href="http://alicecomedyfraser.tumblr.com/" target="_blank">
-          <div class="tile" style="background-image:url('img/podcast.jpg');background-size: 400px;background-position:center;background-position:top;">
+          <div class="tile" style="background-image:url('img/ali_bars.jpg');background-position:center;background-position:top;">
             <div class="band">
               <text class="band_text">Blog</text>
             </div>
@@ -507,7 +507,7 @@ line-height: 19px;
         </a>
 
         <a href="http://www.aggressivelyhelpful.com" target="_blank">
-          <div class="tile" style="background-image:url('img/aggressive_small.jpg');background-position:center;background-position:top;">
+          <div class="tile" style="background-image:url('img/aggressive_small.png');background-position:center;background-position:top;">
             <div class="band">
               <text class="band_text helpful">Aggressively Helpful</text>
             </div>
