--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@ line-height: 19px;
 
 
 
-        <a href="http://newslabarticles.tumblr.com/" target="_blank">
+        <a href="" target="_blank">
           <div class="tile" style="background-image:url('img/podcast.png');background-position:top;background-position:top">
             <div class="band">
               <text class="band_text">Podcast</text>
