--- a/xml.html
+++ b/xml.html
@@ -25,7 +25,7 @@ $(document).ready(function(){
 
       var fileName = episodeNumber + '_' + title.split(' ').join('_') + '.mp3';
       d = new Date().toString().split(' ');
-      var formatDate = d[0] + ', ' + d[2] + ' ' + d[1] + ' ' + d[3] + ' ' + d[4] + ' ' + 'A' + d[6].replace('(', '').replace(')', '');
+      var formatDate = d[0] + ', ' + d[2] + ' ' + d[1] + ' ' + d[3] + ' ' + d[4] + ' ' + '+ 1100';
 
       var xmlGenerated = '<item>\n<title>'+ title +'</title>\n<itunes:author>Alice Fraser</itunes:author>\n<itunes:subtitle>'+ subtitle +'</itunes:subtitle>\n<itunes:summary>'+ summary +'</itunes:summary>\n<enclosure url="http://s3-ap-southeast-2.amazonaws.com/alicepodcast/' + fileName + '" length="' + fileSize + '" type="audio/mp3"/>\n<pubDate>' + formatDate + '</pubDate>\n<itunes:duration>' + duration + '</itunes:duration>\n</item>'
 
