--- a/xml.html
+++ b/xml.html
@@ -27,7 +27,7 @@ $(document).ready(function(){
       d = new Date().toString().split(' ');
       var formatDate = d[0] + ', ' + d[2] + ' ' + d[1] + ' ' + d[3] + ' ' + d[4] + ' ' + '+ 1100';
 
-      var xmlGenerated = '<item>\n<title>'+ title +'</title>\n<itunes:author>Alice Fraser</itunes:author>\n<itunes:subtitle>'+ subtitle +'</itunes:subtitle>\n<itunes:summary>'+ summary +'</itunes:summary>\n<enclosure url="http://s3-ap-southeast-2.amazonaws.com/alicepodcast/' + fileName + '" length="' + fileSize + '" type="audio/mp3"/>\n<pubDate>' + formatDate + '</pubDate>\n<itunes:duration>' + duration + '</itunes:duration>\n</item>'
+      var xmlGenerated = '<item>\n<title>'+ title +'</title>\n<itunes:author>Alice Fraser</itunes:author>\n<itunes:subtitle>'+ subtitle +'</itunes:subtitle>\n<itunes:summary>'+ summary +'</itunes:summary>\n<enclosure url="http://s3-ap-southeast-2.amazonaws.com/alicepodcast/' + fileName + '" length="' + fileSize + '" type="audio/mp3"/>\n<pubDate>' + formatDate + '</pubDate>\n<itunes:duration>' + duration + '</itunes:duration>\n<guid>' + 'http://s3-ap-southeast-2.amazonaws.com/alicepodcast/' + fileName + '</guid>\n</item>'
 
       $('#fileName').val(fileName);
       $('#xmlGenerated').val(xmlGenerated);
