--- a/xml.html
+++ b/xml.html
@@ -68,8 +68,8 @@ $(document).ready(function(){
   <li>Click "Upload".  Then click "Add Files".  Just select the Mp3 from your computer.</li>
   <li>In the bottom right hand corner, click "Start Upload".</li>
   <li>Now go to the feed code on alicecomedyfraser on github by clicking <a target="_blank" href="https://github.com/alicerfraser/alicecomedyfraser/blob/gh-pages/podcast.rss" target="_blank">here</a>.</li>
-  <li>Find the itunes tag for "Arts".  Underneath that will be the first "item" tag.  Make a space between them and insert the new item.</li>
-  <li>Save the Github page, then check that the feed updated properlby by going <a target="_blank" href="http://alicecomedyfraser.com/podcast.rss">here</a>. </li>
+  <li>Find the itunes tag for "Arts".  Underneath that will be the first "item" tag.  Make a space between them and insert the xml for the new item.</li>
+  <li>Save the Github page, then check that the feed updated properly by going <a target="_blank" href="http://alicecomedyfraser.com/podcast.rss">here</a>. </li>
 
 
 </ol>
@@ -85,15 +85,15 @@ $(document).ready(function(){
   <p><b>File Size</b> - Fill this out by right clicking on the mp3, hitting "Get Info", and type in the number of "bytes" (which will be large - delete commas!).<br></p>
   <textarea type='text' rows="1" cols="60" name="fileSize" class="span3"></textarea>
   <br><br>
-  <p><b>Title</b> - Title of the Podcast (don't include full stops): maximum [*] words.<br></p>
+  <p><b>Title</b> - Title of the Podcast (don't include full stops).<br></p>
   <textarea type='text' rows="1" cols="60" name="title"></textarea>
   <br><br>
 
-  <p><b>Subtitle</b> - Subtitle of the Podcast: maximum [*] words.<br></p>
+  <p><b>Subtitle</b> - Subtitle of the Podcast.<br></p>
   <textarea type='text' rows="1" cols="60" name="subtitle"></textarea>
   <br><br>
 
-  <p><b>Summary</b> - Summary of the Podcast: maximum [*] words.<br></p>
+  <p><b>Summary</b> - Summary of the Podcast.<br></p>
   <textarea type='text' rows="3" cols="60" name="summary"></textarea>
   <br><br>
 
