Updated gigs with ticket Links for MICF and CCF

--- a/gigs.html
+++ b/gigs.html
@@ -52,7 +52,11 @@
 
             <p>Friday March 7th at 7pm</p>
 
-            <p>Canberra Comedy Festival: Tickets On Sale Soon</p>
+            <p>Canberra Comedy Festival:$15 </p>
+            
+            <p>Tickets Available!</p>
+
+            <a class="btn btn-info" href="http://canberracomedyfestival.com.au/events/aggressively-helpful-the-rise-and-fall-of-the-romance-empire/">Here</a>
 
 <br>
 <hr>
@@ -62,9 +66,10 @@
 
             <p>Sat March 8th at 7pm</p>
 
-            <p>Canberra Comedy Festival: Tickets On Sale Soon</p>
+           <p>Tickets Available!</p>
 
-<br>
+            <a class="btn btn-info" href="http://canberracomedyfestival.com.au/events/alice-fraser-everyones-a-winner/">Here</a>
+
 <br>
 <hr>
 
