Updated title and intro chat etc for gigs page

--- a/gigs.html
+++ b/gigs.html
@@ -12,7 +12,7 @@
 	<div class="span8 offset2" style="text-align:center">
 		<div class="row">
 		<div class="span8 offet4" style="text-align:center">
-		<h3>You can see me in...</h3>
+		<h3>Gigs</h3>
 		<a href="index.html">< Back</a><br>
 	</div>
 	</div>
@@ -21,9 +21,9 @@
 <br>
 
 
-<h4>Below are my big upcoming gigs. </h4>
+<h4>Below are my big upcoming gigs, </h4>
 
-            <p>If you're wondering if I'm doing anything today, follow me</p>
+            <p>but I do lots of little ones around the place. If you're wondering if I'm doing anything <i>today</i>, follow me:</p>
 
             <a class="btn btn-info" href="http://www.twitter.com/aliterative">on twitter</a>
             <a class="btn btn-info" href="http://www.facebook.com/alice.r.fraser">on facebook</a>
