--- a/gigs.html
+++ b/gigs.html
@@ -20,10 +20,7 @@
 
 <br>
 
-
-<h4>Below are my upcoming gigs, </h4>
-
-            <p>If you're wondering if I'm doing anything <i>today</i>, follow me:</p>
+            <h4>If you're wondering if I'm doing anything <i>today</i>, follow me:</h4>
 
             <a class="btn btn-info" href="http://www.twitter.com/aliterative">on twitter</a>
             <a class="btn btn-info" href="http://www.facebook.com/alice.r.fraser">on facebook</a>
@@ -39,7 +36,6 @@
             <p>Friday, 8 pm, 14 February 2014</p>
 
 <br>
-<hr>
 
 <br>
 <h4>Headliner at Comedy at The Oriental Hotel, Cooks Hill (Newcastle)</h4>
@@ -62,6 +58,17 @@
 <br>
 <hr>
 
+<br>
+
+<h4>"Everyone's A Winner" at the Canberra Comedy Festival</h4>
+
+            <p>Sat March 8th at 7pm</p>
+
+           <p>Tickets Available!</p>
+
+            <a class="btn btn-info" href="http://canberracomedyfestival.com.au/events/alice-fraser-everyones-a-winner/">Here</a>
+
+<br>
 
 <h4>"Everyone's A Winner" - Melbourne International Comedy Festival 2014</h4>
 
@@ -76,8 +83,6 @@
 <br>
 <hr>
 <br>
-
-
 <h4>"Aggressively Helpful" (with Justine Rogers and Alex Wasiel)</h4>
 
             <p>Friday March 7th at 7pm</p>
@@ -87,18 +92,6 @@
             <p>Tickets Available!</p>
 
             <a class="btn btn-info" href="http://canberracomedyfestival.com.au/events/aggressively-helpful-the-rise-and-fall-of-the-romance-empire/">Here</a>
-
-<br>
-<hr>
-<br>
-
-<h4>"Everyone's A Winner" at the Canberra Comedy Festival</h4>
-
-            <p>Sat March 8th at 7pm</p>
-
-           <p>Tickets Available!</p>
-
-            <a class="btn btn-info" href="http://canberracomedyfestival.com.au/events/alice-fraser-everyones-a-winner/">Here</a>
 
 <br>
 <hr>
