--- a/gigs.html
+++ b/gigs.html
@@ -30,6 +30,30 @@
 
 <br>
 <hr>
+
+<h4>Preview Night for Sydney Comedy Festival 2014</h4>
+
+            <p>Friday 14 March, 8pm </p>
+            <p>Factory Theatre, Marrickville </p>
+
+            <p>Tickets Available!</p>
+
+            <a class="btn btn-info" href="http://premier.ticketek.com.au/shows/show.aspx?sh=PREVIEWN14">Here</a>
+
+<br>
+<hr>
+
+<h4>Preview Night for Sydney Comedy Festival 2014</h4>
+
+            <p>Sat 15 March, 8pm </p>
+            <p>The Concourse, Chatswood </p>
+
+            <p>Tickets Available!</p>
+
+            <a class="btn btn-info" href="http://premier.ticketek.com.au/shows/show.aspx?sh=PREVIEWN14">Here</a>
+
+<br>
+<hr>
 <h4>"Everyone's A Winner" at Melbourne International Comedy Festival 2014</h4>
 
             <p>27 March to 6 April (excl. Mondays) 8.30pm </p>
