--- a/gigs.html
+++ b/gigs.html
@@ -27,32 +27,6 @@
 <br>
 <hr>
 <h3>Upcoming Gigs</h3>
-
-<br>
-<hr>
-
-<h4>Preview Night for Sydney Comedy Festival 2014</h4>
-
-            <p>Friday 14 March, 8pm </p>
-            <p>Factory Theatre, Marrickville </p>
-
-            <p>Tickets Available!</p>
-
-            <a class="btn btn-info" href="http://premier.ticketek.com.au/shows/show.aspx?sh=PREVIEWN14">Here</a>
-
-<br>
-<hr>
-
-<h4>Preview Night for Sydney Comedy Festival 2014</h4>
-
-            <p>Sat 15 March, 8pm </p>
-            <p>The Concourse, Chatswood </p>
-
-            <p>Tickets Available!</p>
-
-            <a class="btn btn-info" href="http://premier.ticketek.com.au/shows/show.aspx?sh=PREVIEWN14">Here</a>
-
-<br>
 <hr>
 <h4>"Everyone's A Winner" at Melbourne International Comedy Festival 2014</h4>
 
@@ -103,8 +77,17 @@
 <hr>
 
 <h3>You missed me at...</h3>
+<br>
+<hr>
 
+<h4>Preview Night for Sydney Comedy Festival 2014</h4>
 
+            <p>Friday 14 March, 8pm, Factory Theatre, Marrickville </p>
+<br>
+<hr>
+<h4>Preview Night for Sydney Comedy Festival 2014</h4>
+
+            <p>Sat 15 March, 8pm, The Concourse, Chatswood </p>
 <br>
 <hr>
 <h4>"Everyone's A Winner" at the Canberra Comedy Festival</h4>
@@ -116,113 +99,80 @@
 <h4>"Aggressively Helpful" (with Justine Rogers and Alex Wasiel) at Canberra Comedy Festival</h4>
 
             <p>Friday 7th March, 7pm</p>
-
 <br>
 <hr>
   <h4>Headlining  Green Lights Comedy Night</h4>
 
             <p>Friday 28 February 7:30pm</p>
-
 <br>
 <hr>       
 <h4>MC at Cafe Lounge in Darlinghurst</h4>
 
             <p>Monday 24 February 2014, 7pm</p>
-
 <br>
 <hr>         
 <h4>Everyone's A Winner Sydney Trial Show at the Imperial Hotel in Erskineville</h4>
 
             <p>Sunday 23 February 2014, 6pm</p>
-
-
-
 <br>
 <hr>
 <h4>Valentines Day at Pedens Hotel, Cessnock</h4>
 
             <p>Friday 14 February 2014, 8pm</p>
-
-
 <br>
 <hr>
 <h4>Headliner at Comedy at The Oriental Hotel, Cooks Hill (Newcastle)</h4>
 
             <p>Saturday 15 February 2014, 8pm</p>
-            
-            
-
 <br>
 <hr>
 <h4>Beauty Bar 231 E 14th St Frnt 1, New York</h4>
 
             <p>Thursday, 8 pm, 10 October 2013</p>
-
 <br>
 <hr>
-
 <h4>New York Comedy Club</h4>
 
             <p>Saturday, 9 pm, 12 October 2013</p>
-
 <br>
 <hr>
-
 <h4>Broadway Comedy Club</h4>
 
             <p>Tuesday, 8 pm, 14 October 2013</p>
-
 <br>
 <hr>
-
-
 <h4>Greenwich Village Comedy Club</h4>
 
             <p>Wednesday, 7 pm, 15 October 2013</p>
-
 <br>
 <hr>
 
 <h4>New York Comedy Club</h4>
 
             <p>Friday, 9 pm, 18 October 2013</p>
-
 <br>
-
 <h4>Everyone's a Winner at "The Matchbox", 105 Victoria Road, Marrickville</h4>
 
             <p>8:15pm, Thursday 12 and 19 September 2013</p>
 
 <hr>
-
-
             <h4>A Rational Fear and Panel Debate against <b>Julian Assange</b> at Splendour in the Grass 2013</h4>
 
             <p>Fri 26 July</p>
-
-
 <hr>
-
-
             <h4>Solo Show, Alice Fraser does Word Crime in Canberra, Smiths Alternative, 76 Alinga St Canberra City</h4>
 
             <p>Thurs 25 July, 8pm</p>
-
-
 <hr>
 
   <h4>MC at "Livewired" in Brisbane</h4>
 
   <p>30 June, 7.30pm</p>
-
-
 <hr>
 
 <h4>Resident MC Bedlam Bar, Glebe - June </h4>
 
             <p>Tues 18, 25 June, 7.30pm</p>
-
-
 <br>
 
 <a href="index.html">< Back</a>
