updated with crikey article

--- a/media.html
+++ b/media.html
@@ -21,6 +21,17 @@
 
 <hr>
 
+<p><b>Crikey Op-Ed "Funny Ladies: Women Stand Up"</b></p>
+
+<p><a href="http://dailyreview.crikey.com.au/funny-ladies-women-stand-up/">Crikey Op-Ed "Funny Ladies: Women Stand Up | Melbourne International Comedy Festival</a></p>
+
+<p><i>8 April 2014</i></p>
+
+<hr>
+	
+
+<hr>
+
 <p><b>"That" Herald Sun Review [Full Text]</b></p>
 
 <p><a href="http://alicecomedyfraser.tumblr.com/post/81756885916/the-full-text-of-that-herald-sun-review">Review: Alice Fraser in Everyone's A Winner | Melbourne International Comedy Festival</a></p>
