--- a/gigs.html
+++ b/gigs.html
@@ -27,16 +27,27 @@
 <br>
 <hr>
 <h3>Upcoming Gigs</h3>
-<hr>
-<h4>"Everyone's A Winner" at Melbourne International Comedy Festival 2014</h4>
 
-            <p>27 March to 6 April (excl. Mondays) 8.30pm </p>
-            <p>8 April to 20 April (excl. Mondays) 6.15pm </p>
-            <p>$22 full / $18 concession / $18 Group 6+ / $15 Preview / $15 Tightarse Tuesday</p>
+<hr>
+<h4>"Tracksuits Live" With Dave Carter and Alice Fraser at Mr Falcons in Glebe</h4>
+
+            <p>26 April 7.30pm </p>
+            <p>$10</p>
 
             <p>Tickets Available!</p>
 
-            <a class="btn btn-info" href="http://www.trybooking.com/Booking/BookingEventSummary.aspx?eid=71570">Here</a>
+            <a class="btn btn-info" href="https://www.eventbrite.com.au/e/tracksuits-live-alice-fraser-da-carter-friends-tickets-11292059855">Here</a>
+
+<br>
+
+<hr>
+<h4>Sydney Comedy Festival Cracker Night at the Seymour Centre</h4>
+
+            <p>28 April 7.45pm </p>
+            
+            <p>Tickets Available!</p>
+
+            <a class="btn btn-info" href="http://sydneycomedyfestival.com.au">Here</a>
 
 <br>
 <hr>
@@ -77,6 +88,19 @@
 <hr>
 
 <h3>You missed me at...</h3>
+
+<hr>
+<h4>"Everyone's A Winner" at Melbourne International Comedy Festival 2014</h4>
+
+            <p>27 March to 6 April (excl. Mondays) 8.30pm </p>
+            <p>8 April to 20 April (excl. Mondays) 6.15pm </p>
+            <p>$22 full / $18 concession / $18 Group 6+ / $15 Preview / $15 Tightarse Tuesday</p>
+
+            <p>Tickets Available!</p>
+
+            <a class="btn btn-info" href="http://www.trybooking.com/Booking/BookingEventSummary.aspx?eid=71570">Here</a>
+
+<br>
 
 <h4>Preview Night for Sydney Comedy Festival 2014</h4>
 
