--- a/gigs.html
+++ b/gigs.html
@@ -29,28 +29,6 @@
 <h3>Upcoming Gigs</h3>
 
 <hr>
-<h4>"Tracksuits Live" With Dave Carter and Alice Fraser at Mr Falcons in Glebe</h4>
-
-            <p>26 April 7.30pm </p>
-            <p>$10</p>
-
-            <p>Tickets Available!</p>
-
-            <a class="btn btn-info" href="https://www.eventbrite.com.au/e/tracksuits-live-alice-fraser-da-carter-friends-tickets-11292059855">Here</a>
-
-<br>
-
-<hr>
-<h4>Sydney Comedy Festival Cracker Night at the Seymour Centre</h4>
-
-            <p>28 April 7.45pm </p>
-            
-            <p>Tickets Available!</p>
-
-            <a class="btn btn-info" href="http://sydneycomedyfestival.com.au">Here</a>
-
-<br>
-<hr>
 <h4>"Everyone's A Winner" at Sydney International Comedy Festival 2014</h4>
 
             <p>6, 7, 8, 9 May 7pm </p>
@@ -75,17 +53,7 @@
             <a class="btn btn-info" href="http://www.fbiradio.com/program/tracksuits/">Here</a>
 
 <br>
-<hr>
-<h4>"Final Draft" 2Ser Radio 107.3</h4>
 
-            <p>Saturdays 10am</p>
-
-            <p>tune in online</p>
-
-            <a class="btn btn-info" href="http://www.2ser.com/privacy/itemlist/category/99">Here</a>
-
-<br>
-<hr>
 
 <h3>You missed me at...</h3>
 
@@ -102,10 +70,7 @@
 
 <br>
 
-<h4>Preview Night for Sydney Comedy Festival 2014</h4>
-
-            <p>Friday 14 March, 8pm, Factory Theatre, Marrickville </p>
-            <p>Sat 15 March, 8pm, The Concourse, Chatswood </p>
+<h4>Preview Night & Cracker Comedy Night at the Seymour Centre, the Factory Theatre and the Concourse in Chatswood for Sydney Comedy Festival 2014</h4>
 <br>
 <hr>
 <h4>"Everyone's A Winner" at the Canberra Comedy Festival</h4>
