--- a/gigs.html
+++ b/gigs.html
@@ -28,18 +28,63 @@
 <hr>
 <h3>Upcoming Gigs</h3>
 
-<hr>
-<h4>"Everyone's A Winner" at Sydney International Comedy Festival 2014</h4>
 
-            <p>6, 7, 8, 9 May 7pm </p>
-            <p>11 May 6pm </p>
+
+
+
+<hr>
+<h4>Spots at the Sydney Comedy Store</h4>
+
+            <p>Tue 27th, Thurs 29th, Fri 20th and Sat 31st May</p>
+            <p>8pm </p>
 
             <p>Tickets Available!</p>
 
-            <a class="btn btn-info" href="http://premier.ticketek.com.au/shows/Show.aspx?sh=ALICEFRA14">Here</a>
+            <a class="btn btn-info" href="http://www.comedystore.com.au/index.php?option=com_content&view=article&id=47&Itemid=55">Here</a>
 
 <br>
 <hr>
+<h4>Headliner at Get Up Standup at USYD Manning Bar</h4>
+
+            <p>Wed 28 May</p>
+            <p>1pm </p>
+
+            <p>Free!</p>
+<br>
+<hr>
+
+<hr>
+<h4>MC Comedy Lounge - Cafe Lounge Darlinghurst </h4>
+
+            <p>Mon 2 June</p>
+            <p>7.30pm </p>
+
+            <p>Tickets At the Door!</p>
+<br>
+<hr>
+<h4>Enmore Comedy Club</h4>
+
+            <p>3 June</p>
+            <p>8pm </p>
+
+            <p>Tickets Available!</p>
+
+            <a class="btn btn-info" href="http://www.comedystore.com.au/index.php?option=com_content&view=article&id=47&Itemid=55">Here</a>
+
+<br>
+
+<hr>
+<h4>MC Southside Stories at the Brass Monkey in Cronulla</h4>
+
+            <p>4 June</p>
+            <p>7pm </p>
+
+            <p>Tickets Available!</p>
+
+            <a class="btn btn-info" href="http://brassmonkey.com.au">at the website</a>
+
+<br>
+
 <h4>Regular Gigs</h4>
 
 <br>
@@ -56,6 +101,19 @@
 
 
 <h3>You missed me at...</h3>
+
+<hr>
+<h4>"Everyone's A Winner" at Sydney International Comedy Festival 2014</h4>
+
+            <p>6, 7, 8, 9 May 7pm </p>
+            <p>11 May 6pm </p>
+
+            <p>Tickets Available!</p>
+
+            <a class="btn btn-info" href="http://premier.ticketek.com.au/shows/Show.aspx?sh=ALICEFRA14">Here</a>
+
+<br>
+<hr>
 
 <hr>
 <h4>"Everyone's A Winner" at Melbourne International Comedy Festival 2014</h4>
