--- a/gigs.html
+++ b/gigs.html
@@ -29,6 +29,53 @@
 <h3>Upcoming Gigs</h3>
 
 
+<hr>
+<h4>Loose Leaf Literature at Mr Falcons (Glebe Point Road, Glebe)</h4>
+
+            <p>24 June</p>
+            <p>7pm </p>
+
+            <p>Tickets Available at the Door!</p>
+<br>
+
+<hr>
+<h4>MC Forresters Comedy Circuit with Chris Wainhouse, Alice Fraser and mates</h4>
+
+            <p>25 June</p>
+            <p>7.30pm </p>
+
+            <p>More Info:</p>
+
+            <a class="https://www.facebook.com/events/1449085935349609/?ref_dashboard_filter=upcoming"> here!</a>
+
+<br>
+
+<hr>
+<h4>Feature Spot at Rock Lily (Star Casino) Cnr Pyrmont Street and Jones Bay Road, Pyrmont</h4>
+
+            <p>26 June</p>
+            <p>8.00pm </p>
+
+            <p>Tickets Available at the Door:</p>
+
+<br>
+<h4>Regular Gigs</h4>
+
+<br>
+<hr>
+<h4>"Tracksuits" FBI Radio 94.5</h4>
+
+            <p>Mondays 12pm</p>
+
+            <p>tune in online</p>
+
+            <a class="btn btn-info" href="http://www.fbiradio.com/program/tracksuits/">Here</a>
+
+<br>
+
+
+<h3>You missed me at...</h3>
+
 <h4>MC Comedy Lounge - Cafe Lounge Darlinghurst </h4>
 
             <p>Mon 2 June</p>
@@ -47,35 +94,6 @@
             <a class="btn btn-info" href="http://www.comedystore.com.au/index.php?option=com_content&view=article&id=47&Itemid=55">Here</a>
 
 <br>
-
-<hr>
-<h4>MC Southside Stories at the Brass Monkey in Cronulla</h4>
-
-            <p>4 June</p>
-            <p>7pm </p>
-
-            <p>Tickets Available!</p>
-
-            <a class="btn btn-info" href="http://brassmonkey.com.au">at the website</a>
-
-<br>
-
-<h4>Regular Gigs</h4>
-
-<br>
-<hr>
-<h4>"Tracksuits" FBI Radio 94.5</h4>
-
-            <p>Mondays 12pm</p>
-
-            <p>tune in online</p>
-
-            <a class="btn btn-info" href="http://www.fbiradio.com/program/tracksuits/">Here</a>
-
-<br>
-
-
-<h3>You missed me at...</h3>
 
 <hr>
 <h4>Spots at the Sydney Comedy Store</h4>
