--- a/gigs.html
+++ b/gigs.html
@@ -30,33 +30,49 @@
 
 
 <hr>
-<h4>Loose Leaf Literature at Mr Falcons (Glebe Point Road, Glebe)</h4>
+<h4>Dave O'Neill's Funhouse, The Grandview Hotel Fairfield (Melbourne)</h4>
 
-            <p>24 June</p>
-            <p>7pm </p>
-
-            <p>Tickets Available at the Door!</p>
-<br>
-
-<hr>
-<h4>MC Forresters Comedy Circuit with Chris Wainhouse, Alice Fraser and mates</h4>
-
-            <p>25 June</p>
+            <p>16 July</p>
             <p>7.30pm </p>
 
             <p>More Info:</p>
 
-            <a class="https://www.facebook.com/events/1449085935349609/?ref_dashboard_filter=upcoming"> here!</a>
+            <a class="https://www.facebook.com/itsDaveONeil"> here!</a>
 
 <br>
 
 <hr>
-<h4>Feature Spot at Rock Lily (Star Casino) Cnr Pyrmont Street and Jones Bay Road, Pyrmont</h4>
 
-            <p>26 June</p>
-            <p>8.00pm </p>
 
-            <p>Tickets Available at the Door:</p>
+
+<hr>
+<h4>Dave O'Neill's Funhouse, The Grandview Hotel Fairfield (Melbourne)</h4>
+
+            <p>16 July</p>
+            <p>7.30pm </p>
+
+            <p>More Info:</p>
+
+            <a class="https://www.facebook.com/itsDaveONeil"> here!</a>
+
+<br>
+
+<hr>
+
+<hr>
+<h4>Splendour in the Grass, North Byron Parklands</h4>
+
+            <p>25, 26, 27 July</p>
+            <p>7.30pm </p>
+
+            <p>More Info:</p>
+
+            <a class="http://splendourinthegrass.com"> here!</a>
+
+<br>
+
+<hr>
+
 
 <br>
 <h4>Regular Gigs</h4>
